# liriac

./: .gitignore  01-technical-spec-es.md  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run
.claude/commands/: commit.md  create-ticket.md  implement-ticket.md  review-ticket.md
.copilot-todos/: editor-dialogue-refactor.md
.github/chatmodes/: coder.chatmode.md
.github/instructions/: architect.instructions.md  copilot-instructions.md  liriac-coder.instructions.md
backend/: README.md  manage.py  pyproject.toml  schema.yaml
backend/apps/autosave/: __init__.py  admin.py  apps.py  models.py
backend/apps/autosave/services/: autosave.py
backend/apps/echo/: apps.py  consumers.py
backend/apps/health/: urls.py  views.py
backend/apps/management/commands/: populate_test_data.py
backend/apps/suggestions/: __init__.py  admin.py  consumers.py  models.py
backend/apps/suggestions/migrations/: 0001_initial.py
backend/apps/suggestions/providers/: base.py  mock.py  openai.py
backend/apps/suggestions/services/: stream.py
backend/config/: settings.py  urls.py
backend/liriac/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
backend/studio/: data.py  middleware.py  models.py  payloads.py  sample_data.py  serializers.py  tests.py  urls.py  views.py
backend/studio/data/: __init__.py  blocks.py  books.py  bootstrap.py  chapters.py  context.py  conversions.py  editor.py  generation.py
backend/studio/migrations/: 0001_initial.py  0002_load_sample_data.py  0003_book_context_scope.py  0004_alter_librarysection_options.py  0005_chaptercontextvisibility.py  0006_chapterblock_active_version_number_and_more.py  0007_chapterblockconversion.py
backend/studio/prompts/: __init__.py  block_conversion.py  paragraph_suggestion.py
backend/studio/services/: __init__.py  gemini.py
backend/studio/views/: __init__.py  chapters.py  editor.py  library.py  suggestions.py  utils.py
backend/tests/: test_api_library.py  test_autosave.py  test_health.py  test_models.py  test_openai_provider.py  test_schema.py  test_suggestions_consumer.py  test_suggestions_service.py  test_websocket.py
docs/: 0-design.md  00-draft.md  01-domain.md  01-technical-debts.md  01-technical-spec-en.md  01-technical-spec.md  02-backlog.md  02-technical-stack.md  03-conventions.md  03-epics.md  react-antipattern-findings.md  react-mui-antipatterns.md
docs/reviews/: LR-01-review.md  LR-01A-review.md
docs/tickets/: BL-001.md  BL-002.md  BL-003.md  BL-004.md  BL-005.md  BL-006.md  BL-007.md  BL-008.md  BL-009.md  BL-010.md  BL-011.md  BL-012.md  BL-012A.md  BL-012B.md  BL-012C.md  BL-012D.md  BL-013.md  BL-013A.md  BL-013B.md  BL-013C.md  BL-013D.md  BL-014.md  L-01-Review.md  L-01.md  L-02-Review.md  L-02.md  L-03-Review.md  L-03.md  L-04-Review.md  L-04.md  LR-01.md  LR-01A.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  theme.ts  theme.types.ts
frontend/src/__tests__/: libraryModal.test.tsx  smoke.test.ts
frontend/src/api/: chapters.ts  client.test.ts  client.ts  endpoints.test.ts  endpoints.ts  library.ts  schema.ts  types.ts
frontend/src/app/: routes.tsx
frontend/src/commands/: commandUtils.ts  commands.ts
frontend/src/components/: CommandBar.tsx  ContextEditor.tsx  EditorSurface.tsx  FooterStatusBar.tsx  Settings.tsx  Toasts.tsx  TopAppBar.tsx
frontend/src/data/: contextMock.ts
frontend/src/hooks/: useCommandPalette.ts  useContextModals.ts  useDialogFocusNav.ts  useEditorShortcuts.ts  useEditorStats.ts  useSmartPunctuation.ts  useTheme.ts
frontend/src/pages/: EditorPage.tsx
frontend/src/store/: appStore.tsx
frontend/src/test/: utils.tsx
frontend/src/theme/: ThemeContext.tsx  index.ts  themes.ts
frontend/src/utils/: caret.ts  hash.ts  scenes.ts  sections.ts  tokens.ts
liriac/: __init__.py  __main__.py  cli.py
liriac/domain/: __init__.py  book.py  chapter.py  errors.py  stop_policy.py  values.py
scripts/: cat_backend_logs.sh  cat_frontend_logs.sh  generate_repo_tree.py  run_backend_https.sh
src/liriac/: __init__.py  app.py  cli.py
src/liriac/domain/: __init__.py  ports.py  types.py  value_objects.py
src/liriac/infra/: __init__.py  logging.py  metrics.py
src/liriac/services/: __init__.py
src/liriac/tui/: __init__.py
test-library/detective-mystery/: book.toml  personas.yaml
test-library/detective-mystery/chapters/: 01-the-heist.md  02-first-clues.md
test-library/sci-fi-adventure/: book.toml  personas.yaml
test-library/sci-fi-adventure/.liriac/: state.json
test-library/sci-fi-adventure/chapters/: 01-awakening.md  02-station-alpha.md  03-the-signal.md
test-library/test-book/: book.toml  personas.yaml
test-library/test-book/.liriac/: state.json
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_version.py
tests/domain/: test_entities.py  test_errors.py  test_stop_policy.py  test_types_and_values.py  test_values.py
tests/infra/: __init__.py  test_fs_repository.py  test_logging.py  test_metrics.py  test_settings.py  test_ui_state.py
tests/services/: __init__.py  test_autosave.py  test_context.py  test_suggestions.py
tests/tui/: __init__.py  test_chapter_selection_integration.py  test_context.py  test_editor.py  test_home.py  test_ui_state_integration.py
(+171 files in other folders)
