[project]
name = "liriac-backend"
version = "0.1.0"
description = "Local Django backend for Liriac"
authors = [{ name = "Liriac" }]
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<6",
    "djangorestframework>=3.15,<4",
    "drf-spectacular>=0.27,<0.28",
    "django-cors-headers>=4.4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest-django>=4.8,<5",
    "ruff>=0.6,<0.7",
    "black>=25.9.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["config", "studio"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"studio/migrations/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["config", "studio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.py$"
